tests/c/internal/negative_case/bad_alignof_incomplete_union_type.c
// Expected: compile fail (_Alignof on incomplete union type)
union U;

int main(void) {
  return _Alignof(union U);
}
